# mana-dev

./: .gitignore  Cargo.toml  README.md  build.bat  build.rs  package-lock.json  package.json  run_test.bat
.cargo/: config.toml
.github/workflows/: release.yml
npm/mana-dev/: package.json
npm/mana-dev-darwin-arm64/: package.json
npm/mana-dev-darwin-x64/: package.json
npm/mana-dev-linux-arm64/: package.json
npm/mana-dev-linux-x64/: package.json
npm/mana-dev-win32-x64/: package.json
runtime/: emulator.js  target_processor.js
scripts/: bump-version.js
src/: dev.rs  main.rs
src/runtimes/: v8_runtime.rs.backup
src/runtimes/v8/: config.rs  emulator.rs  engine.rs  executor.rs  mod.rs  thread_pool.rs
watcher/: go.mod  go.sum  main.go  meta.json  package-lock.json  package.json
watcher/scripts/: bundle-polyfills.js
